<package>
  <name>srl_eband_local_planner</name>
  <version>0.3.0</version>
  <description>
    srl_eband_local_planner implements a plugin to the
    base_local_planner. It implements the Elastic Band method on the
    SE2 manifold.
  </description>

  <maintainer email="palmieri@cs.uni-freiburg.de">Palmieri Luigi</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>base_local_planner</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>cmake_modules</build_depend> <!-- to find Eigen -->
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>sfl2</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>

  <run_depend>sfl2</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <nav_core plugin="${prefix}/srl_eband_local_planner_plugin.xml"/>
  </export>

</package>
